Util쪽 JS 파일명 정리 및 Lib로 이동

--- a/src/main/resources/public/template/download/downloadEdit.html
+++ b/src/main/resources/public/template/download/downloadEdit.html
@@ -59,7 +59,7 @@
         /*<![CDATA[*/
         window.onload = function() {
             document.getElementById('downloadTitle').focus();
-            fileUploader.init({extra: {formId: 'downloadForm', ownId: [[${download?.downloadId}]]}});
+            zFileUploader.init({extra: {formId: 'downloadForm', ownId: [[${download?.downloadId}]]}});
             OverlayScrollbars(document.querySelector('.edit'), {className: 'scrollbar'});
         };
 
