--- a/src/main/resources/public/template/board/boardArticlesSearch.html
+++ b/src/main/resources/public/template/board/boardArticlesSearch.html
@@ -53,8 +53,8 @@
             }
             document.getElementById('fromDt').value = searchFromDt;
             document.getElementById('searchToDt').value = searchToDt;
-            dateTimePicker.initDatePicker('fromDt', setDatePicker);
-            dateTimePicker.initDatePicker('searchToDt', setDatePicker);
+            zDateTimePicker.initDatePicker('fromDt', setDatePicker);
+            zDateTimePicker.initDatePicker('searchToDt', setDatePicker);
             document.getElementById('boardAdminId').addEventListener('change', function() { getBoardList(false); });
             document.getElementById('search').addEventListener('keyup', function() { getBoardList(false); });
             getBoardList(false);
