--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -97,19 +97,19 @@
 <script th:src="@{/assets/vendors/rsa/rsa.js}"></script>
 <script th:src="@{/assets/vendors/rsa/prng4.js}"></script>
 <script th:src="@{/assets/vendors/rsa/rng.js}"></script>
-<script th:src="@{/assets/js/util/i18n-alice.js}"></script>
-<script th:src="@{/assets/js/util/alert-alice.js}"></script>
-<script th:src="@{/assets/js/util/validation-alice.js}"></script>
-<script th:src="@{/assets/js/util/util-alice.js}"></script>
+<script th:src="@{/assets/js/util/zI18n.js}"></script>
+<script th:src="@{/assets/js/util/zAlert.js}"></script>
+<script th:src="@{/assets/js/util/zValidation.legacy.js}"></script>
+<script th:src="@{/assets/js/util/zUtil.js}"></script>
 <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
-<script th:src="@{/assets/js/util/fileuploader-alice.js}"></script>
+<script th:src="@{/assets/js/util/zFileuploader.js}"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
     window.onload = function() {
         i18n.init();
         hiddenProgressBar();
         document.getElementById('userId').focus();
-        fileUploader.avatar({
+        zFileUploader.avatar({
             extra: {
                 dropZoneFilesId: 'avatarDropZone',
                 type: 'avatar',
