--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -71,7 +71,7 @@
 </th:block>
 </body>
 <th:block layout:fragment="pageScript">
-    <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
+    <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
     <script th:src="@{/assets/js/cmdb/zCmdbCore.js}"></script>
     <script th:src="@{/assets/js/cmdb/zCmdbAttribute.js}"></script>
     <script type="text/javascript">
