--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -59,7 +59,7 @@
         /*<![CDATA[*/
         window.onload = function() {
             document.getElementById('spanCreateDt').textContent = i18n.userDateTime(document.getElementById('spanCreateDt').textContent);
-            fileUploader.init({extra: {formId: 'frm', ownId: [[${download.downloadId}]], editor: false, isView: true}});
+            zFileUploader.init({extra: {formId: 'frm', ownId: [[${download.downloadId}]], editor: false, isView: true}});
 
             OverlayScrollbars(document.querySelectorAll('.view'), { className: 'scrollbar' });
         };
