--- a/src/main/resources/public/template/formDesigner/formSearch.html
+++ b/src/main/resources/public/template/formDesigner/formSearch.html
@@ -7,7 +7,7 @@
     <title th:text="#{form.label.form}"></title>
 </head>
 <th:block layout:fragment="scriptLink">
-    <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
+    <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
 </th:block>
 <body>
 <th:block layout:fragment="content">
@@ -143,8 +143,8 @@
                                 bindKey: false,
                                 callback: function(modal) {
                                     // TODO: 폼 리팩토링 완료 후, exportWoo를 export로 변경하고 export 함수를 삭제한다.
-                                    workflowUtil.export(responseObject.id, 'form');
-                                    //workflowUtil.exportWoo(responseObject.id, 'form');
+                                    ZWorkflowUtil.export(responseObject.id, 'form');
+                                    //ZWorkflowUtil.exportWoo(responseObject.id, 'form');
                                 }
                             }],
                             close: {
@@ -314,13 +314,13 @@
         //폼 IMPORT
         function importForm() {
             if (checkValidation()) {
-                let fileList = fileUploader.getFile();
+                let fileList = zFileUploader.getFile();
                 const formInfo = {
                     formName: document.getElementById('form_name').value,
                     formDesc: document.getElementById('form_description').value
                 };
 
-                workflowUtil.import(fileList, formInfo, 'form', function (result) {
+                ZWorkflowUtil.import(fileList, formInfo, 'form', function (result) {
                     if (result) {
                         aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function () {
                             location.reload();
@@ -379,7 +379,7 @@
                 },
                 onCreate: function(modal) {
                     // 파일 업로드 추가
-                    fileUploader.init({
+                    zFileUploader.init({
                         extra: {
                             formId: 'importForm',
                             dropZoneMaxFiles: 1,
