--- a/src/main/resources/public/template/formDesigner/fragments/formHead.html
+++ b/src/main/resources/public/template/formDesigner/fragments/formHead.html
@@ -9,22 +9,22 @@
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
     <link th:href="@{/assets/css/formDesigner.css}" rel="stylesheet"/>
-    <script th:src="@{/assets/js/util/i18n-alice.js}"></script>
+    <script th:src="@{/assets/js/util/zI18n.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
-    <script th:src="@{/assets/js/util/util-alice.js}"></script>
-    <script th:src="@{/assets/js/util/modal-alice.js}"></script>
-    <script th:src="@{/assets/js/util/alert-alice.js}"></script>
-    <script th:src="@{/assets/js/util/datetimepicker-alice.js}"></script>
+    <script th:src="@{/assets/js/util/zUtil.js}"></script>
+    <script th:src="@{/assets/js/util/zModal.js}"></script>
+    <script th:src="@{/assets/js/util/zAlert.js}"></script>
+    <script th:src="@{/assets/js/util/zDatetimepicker.js}"></script>
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
-    <script th:src="@{/assets/js/util/colorPalette-alice.js}"></script>
+    <script th:src="@{/assets/js/util/zColorPalette.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
-    <script th:src="@{/assets/js/util/fileuploader-alice.js}"></script>
-    <script th:src="@{/assets/js/util/validation-alice.js}"></script>
-    <script th:src="@{/assets/js/util/tree-alice.js}"></script>
-    <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
+    <script th:src="@{/assets/js/util/zFileuploader.js}"></script>
+    <script th:src="@{/assets/js/util/zValidation.legacy.js}"></script>
+    <script th:src="@{/assets/js/util/zTree.js}"></script>
+    <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
         // TODO: 모듈로 변경 필요
