--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -49,10 +49,10 @@
 <script th:src="@{/assets/vendors/rsa/rsa.js}"></script>
 <script th:src="@{/assets/vendors/rsa/prng4.js}"></script>
 <script th:src="@{/assets/vendors/rsa/rng.js}"></script>
-<script th:src="@{/assets/js/util/alert-alice.js}"></script>
-<script th:src="@{/assets/js/util/i18n-alice.js}"></script>
-<script th:src="@{/assets/js/util/validation-alice.js}"></script>
-<script th:src="@{/assets/js/util/util-alice.js}"></script>
+<script th:src="@{/assets/js/util/zAlert.js}"></script>
+<script th:src="@{/assets/js/util/zI18n.js}"></script>
+<script th:src="@{/assets/js/util/zValidation.legacy.js}"></script>
+<script th:src="@{/assets/js/util/zUtil.js}"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
     i18n.initMessages();
