--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -119,7 +119,7 @@
             document.getElementById('noticeTitle').focus();
             setDisplay('popTab',document.getElementById('popYn'));
             setDisplay('topNoticeTab',document.getElementById('topNoticeYn'));
-            fileUploader.init({extra: {formId: 'frm', ownId: /*[[${notice?.noticeNo}]]*/''}});
+            zFileUploader.init({extra: {formId: 'frm', ownId: /*[[${notice?.noticeNo}]]*/''}});
             OverlayScrollbars(document.querySelectorAll('.edit'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelectorAll('#noticeContents'), {
                 className: 'scrollbar',
@@ -142,15 +142,15 @@
                     document.getElementById('popHeight').value = /*[[${notice?.popHeight} ? ${notice.popHeight} : 500]]*/;
                     document.getElementById('popStrtDt').value = popStrtDtVal ? i18n.userDateTime(popStrtDtVal) : i18n.getDateTime();
                     document.getElementById('popEndDt').value = popEndDtVal ? i18n.userDateTime(popEndDtVal) : i18n.getDateTime({'days':30});
-                    dateTimePicker.initDateTimePicker('popStrtDt');
-                    dateTimePicker.initDateTimePicker('popEndDt');
+                    zDateTimePicker.initDateTimePicker('popStrtDt');
+                    zDateTimePicker.initDateTimePicker('popEndDt');
                 } else if (viewId === 'topNoticeTab') {
                     const topNoticeStrtDtVal = /*[[${notice?.topNoticeStrtDt}]]*/;
                     const topNoticeEndDtVal = /*[[${notice?.topNoticeEndDt}]]*/;
                     document.getElementById('topNoticeStrtDt').value = topNoticeStrtDtVal ? i18n.userDateTime(topNoticeStrtDtVal) : i18n.getDateTime();
                     document.getElementById('topNoticeEndDt').value = topNoticeEndDtVal ? i18n.userDateTime(topNoticeEndDtVal) : i18n.getDateTime({'days':30});
-                    dateTimePicker.initDateTimePicker('topNoticeStrtDt');
-                    dateTimePicker.initDateTimePicker('topNoticeEndDt');
+                    zDateTimePicker.initDateTimePicker('topNoticeStrtDt');
+                    zDateTimePicker.initDateTimePicker('topNoticeEndDt');
                 }
                 document.getElementById(viewId).style.display = 'block';
             } else {
