--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -51,7 +51,7 @@
         window.onload = function() {
             document.getElementById('spanCreateDt').textContent =
                 i18n.userDateTime(document.getElementById('spanCreateDt').textContent);
-            portalFileUploader.init({extra: {formId: 'downloadForm', ownId: [[${download.downloadId}]], editor: false, isView: true}});
+            zFileUploaderPortal.init({extra: {formId: 'downloadForm', ownId: [[${download.downloadId}]], editor: false, isView: true}});
             OverlayScrollbars(document.querySelector('.main'), { className: 'scrollbar' });
         };
         /*]]>*/
