--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -42,8 +42,8 @@
             document.getElementById('searchValue').focus();
             document.getElementById('fromDt').value = searchFromDt;
             document.getElementById('searchToDt').value = searchToDt;
-            dateTimePicker.initDatePicker('fromDt', setDatePicker);
-            dateTimePicker.initDatePicker('searchToDt', setDatePicker);
+            zDateTimePicker.initDatePicker('fromDt', setDatePicker);
+            zDateTimePicker.initDatePicker('searchToDt', setDatePicker);
             document.getElementById('searchValue').addEventListener('keyup', function () {
                 getNoticeList(false);
             });
