--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -59,7 +59,7 @@
                 aliceAlert.alertWarning(i18n.msg('common.msg.delete'));
                 return history.go(-1);
             }
-            portalFileUploader.init({extra: {formId: 'frm', ownId: noticeNo, editor: false, isView: true}});
+            zFileUploaderPortal.init({extra: {formId: 'frm', ownId: noticeNo, editor: false, isView: true}});
             OverlayScrollbars(document.querySelector('.main'), { className: 'scrollbar' });
         }
         /* ]]> */
