--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -56,8 +56,8 @@
             // date picker 초기화
             document.getElementById('searchFromDt').value = searchFromDt;
             document.getElementById('toDt').value = searchToDt;
-            dateTimePicker.initDatePicker('searchFromDt', setDatePicker);
-            dateTimePicker.initDatePicker('toDt', setDatePicker);
+            zDateTimePicker.initDatePicker('searchFromDt', setDatePicker);
+            zDateTimePicker.initDatePicker('toDt', setDatePicker);
 
             // 검색 이벤트 핸들러 셋업
             document.querySelectorAll('#searchTokenType, #searchDocumentId').forEach(function (element) {
