--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -199,7 +199,7 @@
     /*<![CDATA[*/
         window.onload = function() {
             document.getElementById('userId').focus();
-            fileUploader.avatar({
+            zFileUploader.avatar({
                 extra: {
                     dropZoneFilesId: 'avatarDropZone',
                     type: 'avatar',
