lib쪽 JS 파일경로 오류 수정

--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -11,17 +11,17 @@
     <meta http-equiv="pragma" content="no-cache"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
     <link th:href="@{/assets/css/process.css}" rel="stylesheet"/>
-    <script th:src="@{/assets/js/util/zI18n.js}"></script>
+    <script th:src="@{/assets/js/lib/zI18n.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
-    <script th:src="@{/assets/js/util/zModal.js}"></script>
-    <script th:src="@{/assets/js/util/zAlert.js}"></script>
-    <script th:src="@{/assets/js/util/zUtil.js}"></script>
+    <script th:src="@{/assets/js/lib/zModal.js}"></script>
+    <script th:src="@{/assets/js/lib/zAlert.js}"></script>
+    <script th:src="@{/assets/js/lib/zUtil.js}"></script>
     <script th:src="@{/assets/vendors/d3/d3.min.js}"></script>
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
-    <script th:src="@{/assets/js/util/zColorPalette.js}"></script>
-    <script th:src="@{/assets/js/util/zValidation.legacy.js}"></script>
+    <script th:src="@{/assets/js/lib/zColorPalette.js}"></script>
+    <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
     <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
-    <script th:src="@{/assets/js/util/zShortcut.js}"></script>
+    <script th:src="@{/assets/js/lib/zShortcut.js}"></script>
     <script th:src="@{/assets/js/process/process.editor.js}"></script>
     <script th:src="@{/assets/js/process/process.editor.menu.js}"></script>
     <script th:src="@{/assets/js/process/process.editor.util.js}"></script>
