--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -97,12 +97,12 @@
 <script th:src="@{/assets/vendors/rsa/rsa.js}"></script>
 <script th:src="@{/assets/vendors/rsa/prng4.js}"></script>
 <script th:src="@{/assets/vendors/rsa/rng.js}"></script>
-<script th:src="@{/assets/js/util/zI18n.js}"></script>
-<script th:src="@{/assets/js/util/zAlert.js}"></script>
-<script th:src="@{/assets/js/util/zValidation.legacy.js}"></script>
-<script th:src="@{/assets/js/util/zUtil.js}"></script>
+<script th:src="@{/assets/js/lib/zI18n.js}"></script>
+<script th:src="@{/assets/js/lib/zAlert.js}"></script>
+<script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
+<script th:src="@{/assets/js/lib/zUtil.js}"></script>
 <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
-<script th:src="@{/assets/js/util/zFileuploader.js}"></script>
+<script th:src="@{/assets/js/lib/zFileuploader.js}"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
     window.onload = function() {
