--- a/src/main/resources/public/template/certification/status.html
+++ b/src/main/resources/public/template/certification/status.html
@@ -72,9 +72,9 @@
         </div>
     </div>
 </div>
-<script th:src="@{/assets/js/util/zAlert.js}"></script>
-<script th:src="@{/assets/js/util/zI18n.js}"></script>
-<script th:src="@{/assets/js/util/zUtil.js}"></script>
+<script th:src="@{/assets/js/lib/zAlert.js}"></script>
+<script th:src="@{/assets/js/lib/zI18n.js}"></script>
+<script th:src="@{/assets/js/lib/zUtil.js}"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
     window.addEventListener('load', function () {
