--- a/src/main/resources/public/template/formDesigner/fragments/formHead.html
+++ b/src/main/resources/public/template/formDesigner/fragments/formHead.html
@@ -9,21 +9,21 @@
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
     <link th:href="@{/assets/css/formDesigner.css}" rel="stylesheet"/>
-    <script th:src="@{/assets/js/util/zI18n.js}"></script>
+    <script th:src="@{/assets/js/lib/zI18n.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
-    <script th:src="@{/assets/js/util/zUtil.js}"></script>
-    <script th:src="@{/assets/js/util/zModal.js}"></script>
-    <script th:src="@{/assets/js/util/zAlert.js}"></script>
-    <script th:src="@{/assets/js/util/zDatetimepicker.js}"></script>
+    <script th:src="@{/assets/js/lib/zUtil.js}"></script>
+    <script th:src="@{/assets/js/lib/zModal.js}"></script>
+    <script th:src="@{/assets/js/lib/zAlert.js}"></script>
+    <script th:src="@{/assets/js/lib/zDatetimepicker.js}"></script>
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
-    <script th:src="@{/assets/js/util/zColorPalette.js}"></script>
+    <script th:src="@{/assets/js/lib/zColorPalette.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
-    <script th:src="@{/assets/js/util/zFileuploader.js}"></script>
-    <script th:src="@{/assets/js/util/zValidation.legacy.js}"></script>
-    <script th:src="@{/assets/js/util/zTree.js}"></script>
+    <script th:src="@{/assets/js/lib/zFileuploader.js}"></script>
+    <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
+    <script th:src="@{/assets/js/lib/zTree.js}"></script>
     <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
