--- a/src/main/resources/public/template/layout/fragments/commonHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonHead.html
@@ -11,19 +11,19 @@
     <link th:href="@{/assets/theme/{theme}/css/itsm.css(theme=${#authentication.details.theme})}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/toastify/toastify.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
-    <script th:src="@{/assets/js/util/zI18n.js}"></script>
-    <script th:src="@{/assets/js/util/zModal.js}"></script>
-    <script th:src="@{/assets/js/util/zAlert.js}"></script>
-    <script th:src="@{/assets/js/util/zUtil.js}"></script>
+    <script th:src="@{/assets/js/lib/zI18n.js}"></script>
+    <script th:src="@{/assets/js/lib/zModal.js}"></script>
+    <script th:src="@{/assets/js/lib/zAlert.js}"></script>
+    <script th:src="@{/assets/js/lib/zUtil.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
-    <script th:src="@{/assets/js/util/zDatetimepicker.js}"></script>
+    <script th:src="@{/assets/js/lib/zDatetimepicker.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
-    <script th:src="@{/assets/js/util/zFileuploader.js}"></script>
+    <script th:src="@{/assets/js/lib/zFileuploader.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
     <script th:src="@{/assets/vendors/toastify/toastify.custom.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
-    <script th:src="@{/assets/js/util/zValidation.legacy.js}"></script>
-    <script th:src="@{/assets/js/util/zTree.js}"></script>
+    <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
+    <script th:src="@{/assets/js/lib/zTree.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[ */
 
