--- a/src/main/resources/public/template/layout/fragments/commonPortalHead.html
+++ b/src/main/resources/public/template/layout/fragments/commonPortalHead.html
@@ -9,17 +9,17 @@
     <link th:href="@{/assets/vendors/quill/quill.snow.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/toastify/toastify.css}" rel="stylesheet"/>
     <link th:href="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.css}" rel="stylesheet"/>
-    <script th:src="@{/assets/js/util/zI18n.js}"></script>
-    <script th:src="@{/assets/js/util/zAlert.js}"></script>
-    <script th:src="@{/assets/js/util/zUtil.js}"></script>
+    <script th:src="@{/assets/js/lib/zI18n.js}"></script>
+    <script th:src="@{/assets/js/lib/zAlert.js}"></script>
+    <script th:src="@{/assets/js/lib/zUtil.js}"></script>
     <script th:src="@{/assets/vendors/luxon/luxon.js}"></script>
-    <script th:src="@{/assets/js/util/zDatetimepicker.js}"></script>
+    <script th:src="@{/assets/js/lib/zDatetimepicker.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
-    <script th:src="@{/assets/js/util/zFileuploaderPortal.js}"></script>
+    <script th:src="@{/assets/js/lib/zFileuploaderPortal.js}"></script>
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
     <script th:src="@{/assets/vendors/toastify/toastify.custom.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
-    <script th:src="@{/assets/js/util/zValidation.legacy.js}"></script>
+    <script th:src="@{/assets/js/lib/zValidation.legacy.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[ */
 
