--- a/src/main/resources/public/template/process/processAttachFileView.html
+++ b/src/main/resources/public/template/process/processAttachFileView.html
@@ -11,9 +11,9 @@
     <meta http-equiv="pragma" content="no-cache"/>
     <title th:text="#{common.label.attachFile}" /></title>
     <link th:href="@{/assets/css/process.css}" rel="stylesheet"/>
-    <script th:src="@{/assets/js/util/zI18n.js}"></script>
-    <script th:src="@{/assets/js/util/zAlert.js}"></script>
-    <script th:src="@{/assets/js/util/zUtil.js}"></script>
+    <script th:src="@{/assets/js/lib/zI18n.js}"></script>
+    <script th:src="@{/assets/js/lib/zAlert.js}"></script>
+    <script th:src="@{/assets/js/lib/zUtil.js}"></script>
 </head>
 <body>
     <div class="thumbnail-modal-wrapper">
