--- a/src/main/resources/public/template/sample/errorhandle.html
+++ b/src/main/resources/public/template/sample/errorhandle.html
@@ -27,7 +27,7 @@
 
 <div id="error"></div>
 
-<script th:src="@{/assets/js/util/zUtil.js}" th:inline="javascript"></script>
+<script th:src="@{/assets/js/lib/zUtil.js}" th:inline="javascript"></script>
 <script th:inline="javascript">
     window.onload = function () {
         function loadDoc(e, url) {
