#10747 폼 리팩토링 - image 컴포넌트

--- a/src/main/resources/public/src/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/src/scss/formDesigner/_form.scss
@@ -182,6 +182,8 @@
       }
     }
     .#{$common-prefix}imagebox {
+      width: 100%;
+      height: 100%;
       &[src=''] {
         display: none;
         + .#{$common-prefix}imagebox-placeholder {
