--- a/src/main/resources/public/src/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/src/scss/formDesigner/_form.scss
@@ -191,6 +191,14 @@
         }
       }
     }
+    // time, date, datepicker 컴포넌트
+    .datepicker,
+    .datetimepicker {
+      background: $white url("#{$icon-folder-path}icon_calendar.svg") no-repeat 98% 50%;
+    }
+    .timepicker {
+      background: $white url("#{$icon-folder-path}icon_clock.svg") no-repeat 98% 50%;
+    }
   }
 }
 // label
