#10638 CMDB와 연동 데이터 간의 매핑 정보 설정 1. CMDB_CI 테이블에 mapping_id 컬럼 추가 2. CMDB_ATTRIBUTE 테이블에 mapping_id 컬럼 추가 3. Attribute 설정 화면에 매핑아이디 추가

--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -39,6 +39,13 @@
                        th:value="${attribute?.attributeText}"/>
             </div>
             <div class="flex-column edit-row">
+                <label for="mappingId">
+                    <span th:text="#{cmdb.attribute.label.mappingId}"></span>
+                </label>
+                <input type="text" id="mappingId" maxlength="100"
+                       th:value="${attribute?.mappingId}"/>
+            </div>
+            <div class="flex-column edit-row">
                 <label for="attributeType">
                     <span th:text="#{cmdb.attribute.label.type}"></span>
                     <span class="required"></span>
@@ -142,6 +149,7 @@
                         attributeName: document.querySelector('#attributeName').value,
                         attributeType: document.querySelector('#attributeType').value,
                         attributeText: document.querySelector('#attributeText').value,
+                        mappingId: document.querySelector('#mappingId').value,
                         attributeDesc: document.querySelector('#attributeDesc').value
                     }
                     let url = '/rest/cmdb/attributes';
