--- a/src/main/resources/public/template/cmdb/ci/ciListModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciListModal.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-<table>
-    <thead class="list-head">
-    <tr>
-        <th style="width: 5%;" class="align-center"></th>
-        <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.seqNum}"></th>
-        <th style="width: 0%; display: none;"></th>
-        <th style="width: 0%; display: none;"></th>
-        <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.type}"></th>
-        <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.name}"></th>
-        <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.description}"></th>
-        <th style="width: 0%; display: none;"></th>
-        <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.tag}"></th>
-    </tr>
-    </thead>
-    <tbody class="list-body">
-    <input type="hidden" id="ciCount" name="ciCount" th:value="${ciListCount}"/>
-    <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(ciList)}">
-        <td style="width: 100%;" colspan="9" class="align-center" th:text="#{common.msg.noData}"></td>
-    </tr>
-    <th:block th:each="ci, index : ${ciList}">
-        <tr class="list-row" th:id="'ci-' + ${ci.ciId}">
-            <td style="width: 5%;" class="align-center" id="ciId">
-                <label class="checkbox" th:for="${index.index}" tabindex="0">
-                    <input type="checkbox" th:name="${ci.ciName}" th:id="${index.index}" th:value="${ci.ciId}"/>
-                    <span></span>
-                </label>
-            </td>
-            <td style="width: 15%;" class="align-left" id="ciNo" th:text="${ci.ciNo}"></td>
-            <td style="width: 0%; display: none;" id="ciIcon" th:text="${ci.ciIcon}"></td>
-            <td style="width: 0%; display: none;" id="ciIconData" th:text="${ci.ciIconData}"></td>
-            <td style="width: 0%; display: none;" id="typeId" th:text="${ci.typeId}"></td>
-            <td style="width: 15%;" class="align-left" id="typeName" th:text="${ci.typeName}"></td>
-            <td style="width: 15%;" class="align-left" id="ciName" th:text="${ci.ciName}"></td>
-            <td style="width: 25%;" class="align-left" id="ciDesc" th:text="${ci.ciDesc}"></td>
-            <td style="width: 0%; display: none;" id="classId" th:text="${ci.classId}"></td>
-            <td style="width: 25%;" class="align-left">
-                <div class="tag-group align-middle">
-                    <span class="tag align-center text-ellipsis" th:each="tag: ${ci.tags}" th:text="${tag.tagValue}"></span>
-                </div>
-            </td>
+    <input type="hidden" id="ciListCount" th:value="${ciListCount}"/>
+    <table class="list-table">
+        <thead class="list-head">
+            <tr>
+                <th style="width: 5%;" class="align-center"></th>
+                <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.seqNum}"></th>
+                <th style="width: 0%; display: none;"></th>
+                <th style="width: 0%; display: none;"></th>
+                <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.type}"></th>
+                <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.name}"></th>
+                <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.description}"></th>
+                <th style="width: 0%; display: none;"></th>
+                <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.tag}"></th>
+            </tr>
+        </thead>
+        <tbody class="list-body">
+        <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(ciList)}">
+            <td style="width: 100%;" colspan="9" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
-    </th:block>
-    </tbody>
-</table>
+        <th:block th:unless="${#arrays.isEmpty(ciList)}" th:each="ciData, index: ${ciList}">
+            <tr class="list-row"  th:id="|ciRow${ciData.ciId}|">
+                <td style="width: 5%;" class="align-center" id="ciId">
+                    <label class="checkbox" th:for="${index.index}" tabindex="0">
+                        <input type="checkbox" th:name="${ciData.ciName}" th:id="${index.index}" th:value="${ciData.ciId}"/>
+                        <span></span>
+                    </label>
+                </td>
+                <td style="width: 15%;" class="align-left" id="ciNo" th:text="${ciData?.ciNo}"></td>
+                <td style="width: 0%; display: none;" id="ciIcon" th:text="${ciData.ciIcon}"></td>
+                <td style="width: 0%; display: none;" id="ciIconData" th:text="${ciData.ciIconData}"></td>
+                <td style="width: 0%; display: none;" id="typeId" th:text="${ciData.typeId}"></td>
+                <td style="width: 15%;" class="align-left" id="typeName" th:text="${ciData.typeName}"></td>
+                <td style="width: 15%;" class="align-left" id="ciName" th:text="${ciData.ciName}"></td>
+                <td style="width: 25%;" class="align-left" id="ciDesc" th:text="${ciData.ciDesc}"></td>
+                <td style="width: 0%; display: none;" id="classId" th:text="${ciData.classId}"></td>
+                <td style="width: 25%;" class="align-left">
+                    <div class="tag-group align-middle">
+                        <input type="text" name="ciListTags" class="tag align-center text-ellipsis" th:value="${ciData.tags}" readonly/>
+                    </div>
+                </td>
+            </tr>
+        </th:block>
+        </tbody>
+    </table>
 </body>
 </html>
