--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -14,6 +14,7 @@
 <th:block layout:fragment="scriptLink">
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
     <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
+    <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
     <script th:src="@{/assets/js/lib/zColorPalette.js}"></script>
     <script th:src="@{/assets/js/workflow/zWorkflowUtil.js}"></script>
     <script th:src="@{/assets/js/cmdb/zCmdbAttribute.js}"></script>
