--- a/src/main/resources/public/template/cmdb/ci/ciEditModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciEditModal.html
@@ -5,7 +5,7 @@
     <div class="cmdb-ci-content-edit flex-column">
         <div class="edit-form">
             <input type="hidden" id="ciId" th:value="${ciData?.ciId}"/>
-            <input type="hidden" id="typeIconData" th:value="${ciData?.ciIconData}"/>
+            <input type="hidden" id="ciIconData" th:value="${ciData?.ciIconData}"/>
             <!-- CI No -->
             <div class="flex-column edit-row">
                 <label class="field-label" for="ciNo">
@@ -21,17 +21,18 @@
                 </label>
                 <div class="flex-row input-button">
                     <input type="hidden" id="typeId" th:value="${ciData?.typeId}" />
-                    <input type="text" id="typeName" class="col-pct-12 inherit" th:value="${ciData?.typeName}" readonly required="true" th:attr="data-required-name=#{cmdb.ci.label.type}"/>
-                    <button class="default-line" id="typeSelectBtn" type="button" th:onclick="CI.openSelectTypeModal([[${ciData?.typeId}]]);" th:text="#{common.btn.select}"></button>
+                    <input type="text" id="typeName" class="col-pct-12 inherit" th:value="${ciData?.typeName}" readonly  required="true"
+                           data-validation-required="true" th:attr="data-validation-required-name=#{cmdb.ci.label.type}"/>
+                    <button class="default-line" id="typeSelectBtn" type="button"  th:text="#{common.btn.select}"></button>
                 </div>
             </div>
             <!-- 아이콘 -->
             <div class="flex-column edit-row">
-                <label class="field-label" for="typeIcon">
+                <label class="field-label" for="ciIcon">
                     <span th:text="#{cmdb.type.label.icon}"></span>
                 </label>
                 <div class="flex-row input-button">
-                    <input type="text" id="typeIcon" class="col-pct-12 inherit" th:value="${ciData?.ciIcon}" readonly>
+                    <input type="text" id="ciIcon" class="col-pct-12 inherit" th:value="${ciData?.ciIcon}" readonly>
                 </div>
             </div>
             <!-- CI 이름 -->
@@ -40,7 +41,8 @@
                     <span th:text="#{cmdb.ci.label.name}"></span>
                     <span class="required"></span>
                 </label>
-                <input id="ciName" type="text" maxlength="100" required="true" th:value="${ciData?.ciName}" th:attr="data-required-name=#{cmdb.ci.label.name}"/>
+                <input id="ciName" type="text" maxlength="100" required="true" th:value="${ciData?.ciName}"
+                       data-validation-required="true" th:attr="data-validation-required-name=#{cmdb.ci.label.name}"/>
             </div>
             <!--CI 설명 -->
             <div class="flex-column edit-row">
@@ -56,11 +58,12 @@
                     <span class="required"></span>
                 </label>
                 <input type="hidden" id="classId" th:value="${ciData?.classId}"/>
-                <input id="className" type="text" maxlength="100" readonly th:value="${ciData?.className}"/>
+                <input id="className" type="text" maxlength="100" readonly required="true"
+                       data-validation-required="true" th:attr="data-validation-required-name=#{cmdb.type.label.class}" th:value="${ciData?.className}"/>
                 <!-- // 2021-02-09 타입선택시 클래스가 변경되는 것 외에 클래스 선택 기능은 막음
                 <div class="flex-row input-button">
                     <input type="hidden" id="classId" th:value="${ciData?.classId}"/>
-                    <input type="text" id="className" class="col-pct-12 inherit" th:value="${ciData?.className}" readonly required="true" th:attr="data-required-name=#{cmdb.type.label.class}"/>
+                    <input type="text" id="className" class="col-pct-12 inherit" th:value="${ciData?.className}" readonly required="true" th:attr="data-validation-required-name=#{cmdb.type.label.class}"/>
                     <button class="default-line" type="button" th:onclick="CI.openSelectClassModal([[${ciData?.classId}]]);" th:text="#{common.btn.select}"></button>
                 </div>-->
             </div>
@@ -69,13 +72,13 @@
                 <label class="field-label">
                     <span th:text="#{cmdb.ci.label.tag}"></span>
                 </label>
-                <input type="text" id="ciTags" th:onclick="CI.addTags(this, [[${ciData?.ciTags}]]);"/>
+                <input type="text" id="ciTags" th:value="${ciData?.ciTags}" />
             </div>
             <!-- 세부속성 -->
             <div class="flex-column edit-row">
                 <h3 class="sub-title under-bar bold mt-4" th:text="#{cmdb.attribute.label.details}"></h3>
             </div>
-            <div id="ciAttributes" th:onclick="attribute.drawEditDetails(this, [[${ciData?.classes}]]);">
+            <div id="ciAttributes" th:onclick="zCmdbAttribute.drawEditDetails(this, [[${ciData?.classes}]], [[${userInfo}]]);">
             </div>
         </div>
     </div>
