--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -42,10 +42,12 @@
 
         window.onload = function () {
             document.getElementById('search').focus();
-            document.getElementById('fromDt').value = searchFromDt;
-            document.getElementById('searchToDt').value = searchToDt;
-            zDateTimePicker.initDatePicker('fromDt', setDatePicker);
-            zDateTimePicker.initDatePicker('searchToDt', setDatePicker);
+            const fromDtElement = document.getElementById('fromDt');
+            const searchToDtElement = document.getElementById('searchToDt');
+            fromDtElement.value = searchFromDt;
+            searchToDtElement.value = searchToDt;
+            zDateTimePicker.initDatePicker(fromDtElement, setDatePicker);
+            zDateTimePicker.initDatePicker(searchToDtElement, setDatePicker);
             document.getElementById('category').addEventListener('change', function() { getDownloadList(false); });
             document.getElementById('search').addEventListener('keyup', function() { getDownloadList(false); });
 
