--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -40,10 +40,12 @@
         window.onload = function () {
             // initialization date picker
             document.getElementById('searchValue').focus();
-            document.getElementById('fromDt').value = searchFromDt;
-            document.getElementById('searchToDt').value = searchToDt;
-            zDateTimePicker.initDatePicker('fromDt', setDatePicker);
-            zDateTimePicker.initDatePicker('searchToDt', setDatePicker);
+            const fromDtElement = document.getElementById('fromDt');
+            const searchToDtElement = document.getElementById('searchToDt');
+            fromDtElement.value = searchFromDt;
+            searchToDtElement.value = searchToDt;
+            zDateTimePicker.initDatePicker(fromDtElement, setDatePicker);
+            zDateTimePicker.initDatePicker(searchToDtElement, setDatePicker);
             document.getElementById('searchValue').addEventListener('keyup', function () {
                 getNoticeList(false);
             });
