#10750 폼 리팩토링 - textArea 컴포넌트 1. 컴포넌트 구현

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -5019,6 +5019,10 @@ body.modal-active {
   -webkit-border-radius: 0.0625rem;
   -moz-border-radius: 0.0625rem;
 }
+.z-component .z-element .textArea {
+  width: 100%;
+  height: calc(2.5rem * var(--data-row));
+}
 .z-component .z-element .z-text-editor {
   height: calc(2.5rem * var(--data-row));
 }
