--- a/src/main/resources/public/src/scss/template/_file-uploader.scss
+++ b/src/main/resources/public/src/scss/template/_file-uploader.scss
@@ -68,6 +68,7 @@
           .add-file-button-wrap {
             margin-top: 0.5rem;
             // browse 버튼
+            // todo: 클릭가능할 떄만 포인트 컬러가 보이게 할지 확인 필요.
             .dz-clickable {
               color: $dropzone-clickable-font-color;
               cursor: pointer;
