--- a/src/main/resources/public/src/scss/formDesigner/_elements.scss
+++ b/src/main/resources/public/src/scss/formDesigner/_elements.scss
@@ -79,3 +79,12 @@
     }
   }
 }
+
+// datepicker
+.datepicker,
+.datetimepicker {
+  background: $white url("#{$icon-folder-path}icon_calendar.svg") no-repeat 98% 50%;
+}
+.timepicker {
+  background: $white url("#{$icon-folder-path}icon_clock.svg") no-repeat 98% 50%;
+}
