--- a/src/main/resources/public/src/scss/formDesigner/_layout.scss
+++ b/src/main/resources/public/src/scss/formDesigner/_layout.scss
@@ -240,3 +240,11 @@
     .#{$common-prefix}group-label { pointer-events: none; }
   }
 }
+.vertical {
+  display: block;
+}
+
+.horizontal {
+  display: inline-block;
+  margin-right: 0.3125rem;
+}
